<resources>
    <string name="app_name">YulizaEv3</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_cancel_button">Cancel</string>
    <string name="login_error_message">password must have 6 characters</string>
    <string name="color_mode_title">Search</string>
    <string name="filter_title">Title</string>
    <string name="nombre_animal">Nombre</string>
    <string name="raza_animal">Raza.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>